--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   display: inline-block;
   border: 1px black solid;
   padding: 40px;
-  margin: 20px;
+  margin: 10px auto 40px;
 }
 
 .black {
@@ -35,7 +35,7 @@ body {
 
 #pixel-board {
   display: grid;
-  grid-template-columns: repeat(5, 85px);
+  grid-template-columns: repeat(5, auto);
   justify-content: center;
 }
 
@@ -43,4 +43,6 @@ body {
   background-color: white;
   border: 1px black solid;
   padding: 40px;
+  height: 40px;
+  width: 40px;
 }
