--- a/style.css
+++ b/style.css
@@ -1,20 +1,36 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 40px;
 }
 
 #title {
-  text-align: center;
+  font-size: 35px;
+  margin-bottom: 15px;
 }
 
 #color-palette {
-  display: inline-block;
-  width: auto;
+  display: flex;
+
 }
 .color {
-  display: inline-block;
   border: 1px black solid;
-  padding: 40px;
-  margin: 10px auto 40px;
+  height: 40px;
+  width: 40px;
 }
 
 .black {
@@ -36,13 +52,11 @@ body {
 #pixel-board {
   display: grid;
   grid-template-columns: repeat(5, auto);
-  justify-content: center;
 }
 
 .pixel {
   background-color: white;
   border: 1px black solid;
-  padding: 40px;
   height: 40px;
   width: 40px;
 }
