--- a/style.css
+++ b/style.css
@@ -30,7 +30,13 @@ header {
   margin-bottom: 15px;
   font-family: 'Coming Soon', cursive;
   color: rgb(148, 23, 189);
-}
+ }
+
+ #title:hover {
+  -webkit-text-stroke: 1px #dab0e0;
+  transition-timing-function: ease-in-out;
+  max-width: max-content;
+ }
 
 #subtitle {
   font-family: 'Montserrat', sans-serif;
@@ -44,12 +50,19 @@ header {
   background-color: rgb(232, 226, 238);
   padding: 4px;
   border-radius: 4px;
+  border: 1px #9243b1 solid;
   font-family: 'Montserrat', sans-serif;
   color: rgb(73, 11, 82);
+ 
 }
 
-#clear-board:hover {
+#clear-board:active {
   background-color: rgb(247, 209, 247);
+  -webkit-text-stroke: 0.7px #905ba4;
+  transition-timing-function: ease-in-out;
+  max-width: max-content;
+  box-shadow: -2px 2px 2px rgb(219, 169, 244);
+  transition-timing-function: ease-in-out;
 }
 
 #color-palette {
