--- a/style.css
+++ b/style.css
@@ -4,18 +4,19 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 30px;
-  background-image: linear-gradient(
-    45deg,
-    hsl(305, 47%, 77%) 0%,
-    #e1caea 46%,
-    #75dfe7 100%
-  );
-  height: 100vh;
+  background-image: linear-gradient(45deg, hsl(305, 47%, 77%) 0%, #e1caea 46%, #75dfe7 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: 100%;
 }
 
 header {
@@ -26,9 +27,9 @@ header {
 }
 
 #title {
+  font-family: Coming Soon, cursive;
   font-size: 35px;
   margin-bottom: 15px;
-  font-family: 'Coming Soon', cursive;
   color: rgb(148, 23, 189);
 }
 
@@ -39,16 +40,14 @@ header {
 }
 
 #subtitle {
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat, sans-serif;
   font-size: 15px;
   margin-top: 30px;
   border: 1px rgb(173, 143, 196) solid;
   color: rgb(127, 24, 171);
 }
 
-#board-size,
-#generate-board,
-#clear-board {
+#board-size , #generate-board , #clear-board {
   background-color: rgb(242, 238, 245);
   padding: 4px;
   color: #9243b1;
@@ -56,8 +55,8 @@ header {
   border: 2px #9775c2 solid;
 }
 
-#board-size{
-  width: 130px ;
+#board-size {
+  width: 130px;
 }
 
 #clear-board {
@@ -65,18 +64,16 @@ header {
   padding: 4px;
   border-radius: 4px;
   border: 1px #9243b1 solid;
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat, sans-serif;
   color: rgb(73, 11, 82);
 }
 
-#clear-board:active,
-#generate-board:active {
+#clear-board:active , #generate-board:active {
   background-color: rgb(247, 209, 247);
   -webkit-text-stroke: 0.7px #905ba4;
   transition-timing-function: ease-in-out;
   max-width: max-content;
   box-shadow: -2px 2px 2px rgb(219, 169, 244);
-  transition-timing-function: ease-in-out;
 }
 
 #color-palette {
@@ -84,7 +81,7 @@ header {
 }
 
 .selected {
-  box-shadow: 0px 5px 8px rgb(195, 116, 235);
+  box-shadow: 0 5px 8px rgb(195, 116, 235);
   transition-timing-function: ease-in-out;
 }
 
@@ -113,7 +110,7 @@ header {
 #pixel-board {
   display: grid;
   grid-template-columns: repeat(5, auto);
-  box-shadow: 0px 3px 5px rgb(195, 116, 235);
+  box-shadow: 0 3px 5px rgb(195, 116, 235);
 }
 
 .pixel {
